# logs_merger

./: Cargo.toml  README.md
samples/: extractor_ggwp_2000_6-max.txt  hh_ggwp_2000_6-max.txt  tracker_ggwp_2000_6-max.txt
src/: cli.rs  iteration.rs  logger.rs  main.rs  merge.rs  preparations.rs  strings_similarity.rs
