[package]
name = "mlog"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
glob = "0.3.1"
regex = "1.10.2"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
