[package]
name = "mlog"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.11.2"
glob = "0.3.1"
log = "0.4.20"
regex = "1.10.2"

[dev-dependencies]
tempfile = "3"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
